--- a/BlazorHybrid.Wpf/wwwroot/index.html
+++ b/BlazorHybrid.Wpf/wwwroot/index.html
@@ -39,8 +39,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorHybrid.Wpf</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <!-- <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" /> -->
+    <link rel="stylesheet" href="_content/BlazorHybrid.RCL/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="app.css" />
     <link href="BlazorHybrid.Wpf.styles.css" rel="stylesheet" />
 </head>
 
